Regression: Cutting a strip with keyframes in the VSE deletes the keyframes from the original (left) strip. #96699

Closed
opened 2022-03-22 05:40:12 +01:00 by Nick Gammon · 14 comments

System Information
Operating system: Linux-5.4.0-104-generic-x86_64-with-glibc2.27 64 Bits
Graphics card: GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.172.01

Blender Version
Broken: version: 3.1.1 Release Candidate, branch: master, commit date: 2022-03-21 13:47, hash: fc0a07da29
Worked: version 3.0.0

Caused by e49bf4019b

Short description of error
Cutting a strip with keyframes in the VSE deletes the keyframes from the original (left) strip.

Exact steps for others to reproduce the error

  1. Make a strip in the Video Editor (I originally used video strips but can reproduce with a straight color strip).

  2. Keyframe opacity in a few places.

  3. Select the strip and cut it into two using K, somewhere between the keyframe locations.

  4. The right-hand strip retains the keyframe information, and the left-hand strip deletes the keyframes.

  5. This worked in Blender 2.93.0 Beta, and in Blender 3.0.0.

  6. Also NOT working: Blender 3.1.0 and blender-3.2.0-alpha+master.b9123b806fc4-linux.x86_64-release both have the same problem.

  7. The problem seems to not be confined to opacity, I tried keyframing cropping and the same issue occurred.

VSE keyframe issue.blend

Before the cut:

Screenshot from 2022-03-22 14-06-36.png

After the cut:

Screenshot from 2022-03-22 14-11-58.png

**System Information** Operating system: Linux-5.4.0-104-generic-x86_64-with-glibc2.27 64 Bits Graphics card: GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.172.01 **Blender Version** Broken: version: 3.1.1 Release Candidate, branch: master, commit date: 2022-03-21 13:47, hash: `fc0a07da29` Worked: version 3.0.0 Caused by e49bf4019b **Short description of error** Cutting a strip with keyframes in the VSE deletes the keyframes from the original (left) strip. **Exact steps for others to reproduce the error** 1. Make a strip in the Video Editor (I originally used video strips but can reproduce with a straight color strip). 2. Keyframe opacity in a few places. 3. Select the strip and cut it into two using K, somewhere between the keyframe locations. 4. The right-hand strip retains the keyframe information, and the left-hand strip deletes the keyframes. 5. This **worked** in Blender 2.93.0 Beta, and in Blender 3.0.0. 6. **Also NOT working**: Blender 3.1.0 and blender-3.2.0-alpha+master.b9123b806fc4-linux.x86_64-release both have the same problem. 7. The problem seems to not be confined to opacity, I tried keyframing cropping and the same issue occurred. [VSE keyframe issue.blend](https://archive.blender.org/developer/F12939314/VSE_keyframe_issue.blend) Before the cut: ![Screenshot from 2022-03-22 14-06-36.png](https://archive.blender.org/developer/F12939322/Screenshot_from_2022-03-22_14-06-36.png) After the cut: ![Screenshot from 2022-03-22 14-11-58.png](https://archive.blender.org/developer/F12939324/Screenshot_from_2022-03-22_14-11-58.png)
Author

Added subscriber: @nickgammon

Added subscriber: @nickgammon

#96726 was marked as duplicate of this issue

#96726 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report.
It looks like a regression and I didn't find any duplicates so I'm setting it to high priority.
Introduced somewhere between 34d424fd64 and b47a1867e8 (Maybe {eddad4e9a1}?)
I will bisect...

Thanks for the report. It looks like a regression and I didn't find any duplicates so I'm setting it to high priority. Introduced somewhere between `34d424fd64` and `b47a1867e8` (Maybe {eddad4e9a1}?) I will bisect...
Member

Added subscribers: @iss, @lichtwerk

Added subscribers: @iss, @lichtwerk
Member

Just had a duplicate, it is caused by e49bf4019b

CC @iss

Just had a duplicate, it is caused by e49bf4019b CC @iss
Philipp Oeser changed title from Cutting a strip with keyframes in the VSE deletes the keyframes from the original (left) strip. to Regression: Cutting a strip with keyframes in the VSE deletes the keyframes from the original (left) strip. 2022-03-23 11:51:16 +01:00
Member

Added subscriber: @(Deleted)

Added subscriber: @(Deleted)
(Deleted) commented 2022-03-23 16:22:11 +01:00 (Migrated from localhost:3001)

This comment was removed by @(Deleted)

*This comment was removed by @(Deleted)*
Author

There will be. In the patch mentioned above one of the items was:

  • Remove function SEQ_dupe_animdata, do curve duplication explicitly in operator code

The code that was removed would need to be put back, or the problem "in operator code" would need to be resolved. I am confident that this will be achievable.

There will be. In the patch mentioned above one of the items was: * Remove function SEQ_dupe_animdata, do curve duplication explicitly in operator code The code that was removed would need to be put back, or the problem "in operator code" would need to be resolved. I am confident that this will be achievable.

This issue was referenced by e74420124f

This issue was referenced by e74420124f3a429ad8a1492e56a7e1561d86d6f7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-03-29 04:20:33 +02:00
(Deleted) commented 2022-04-15 23:49:24 +02:00 (Migrated from localhost:3001)

This comment was removed by @(Deleted)

*This comment was removed by @(Deleted)*

I have incorrectly included patch for corrective 3.1 release so it wasn't included.

You can use latest alpha build from https://builder.blender.org/download/daily/ where fixes are applied daily. Sorry for inconvinience.

I have incorrectly included patch for corrective 3.1 release so it wasn't included. You can use latest alpha build from https://builder.blender.org/download/daily/ where fixes are applied daily. Sorry for inconvinience.
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#96699
No description provided.