Fix T96699: Splitting strip does not copy animation

Since e49bf4019b49, animation is handled explicitly. Split operator
wasn't updated.

Re-use backup-duplicate-restore animation functions, that other
operators use for splitting.